openspec: implement add-sandbox-core